# fastapi-tutorial

./: .gitignore  Pipfile  pyproject.toml
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  posts.py  users.py
